--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
-    "vue-the-mask": "^0.11.1"
+    "vue-the-mask": "^0.11.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
+    "@types/yup": "^0.29.14",
     "@vitejs/plugin-vue": "^5.2.3",
     "sass": "^1.89.1",
     "vite": "^6.3.5",
