--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
     "@mdi/font": "^7.4.47",
     "@types/yup": "^0.29.14",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/eslint-config-standard": "^9.0.1",
+    "eslint": "^9.32.0",
+    "eslint-plugin-vue": "^10.4.0",
     "sass": "^1.89.1",
     "vite": "^6.3.5",
     "vite-plugin-vuetify": "^2.1.1",
