--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,19 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
+    "@types/node": "^24.3.0",
     "@types/yup": "^0.29.14",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vitest/ui": "^3.2.4",
     "@vue/eslint-config-standard": "^9.0.1",
     "eslint": "^9.32.0",
     "eslint-plugin-vue": "^10.4.0",
     "sass": "^1.89.1",
+    "typescript": "^5.9.2",
     "vite": "^6.3.5",
     "vite-plugin-vuetify": "^2.1.1",
+    "vitest": "^3.2.4",
+    "vue-tsc": "^3.0.6",
     "vuetify": "^3.8.0-beta.0"
   }
 }
